fb adding some trouble to simple.html

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ copyright Git.Training
 Some silly changes from master branch	
 -->
 <head>
-	<title>Silly changes</title>
+	<title>Lots of  time</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,12 @@ Some silly changes from master branch
 </head>
 <body>
 	<main class="container">
-	<!-- junk filler content -->
+	<!-- Content Goes Here -->
 		<p>
-			Just stuff content
+			Just some nothing
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; johnric guyano 2014</p>
 	</footer>
 </body>
 </html>
