--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 copyright Git.Training
-Adding changes before rebasing conflicts
+Some silly changes from master branch	
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>Silly changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,13 +16,13 @@ Adding changes before rebasing conflicts
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- junk filler content -->
 		<p>
-			Just some content
+			Just stuff content
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; git training 2014</p>
+		<p>&copy; johnric guyano 2014</p>
 	</footer>
 </body>
 </html>
