Adding changes after rebasin conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 copyright Git.Training
-Some silly changes from master branch	
+
 -->
 <head>
-	<title>Lots of  time</title>
+	<title>Lots of  trouble, in a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
