local: updating simple.html copyright notice

--- a/simple.html
+++ b/simple.html
@@ -22,6 +22,7 @@ copyright Git.Training
 		</p>
 	</main>
 	<footer class="container">
+		<p>&copy; 2014 Git training , All righ reserve.
 	</footer>
 </body>
 </html>
