--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ copyright Git.Training
 
 -->
 <head>
-	<title>Lots of  trouble, in a little repo</title>
+	<title>Updating title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@ copyright Git.Training
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some nothing
+			Adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
