Updating for tag 1.2

--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ copyright Git.Training
 
 -->
 <head>
-	<title>simple Updating title</title>
+	<title>updating title for tagging example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
